canary/deployment-ab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucp-deployment-ab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-ucp-ab
      version: v1
      example: traffic-management
  template:
    metadata:
      labels:
        app: myapp-ucp-ab
        version: v1
        example: traffic-management
    spec:
      containers:
      - name: ucp-container-ab-1
        image: docker.io/pintulohargcetts/nginx_custom:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucp2-deployment-ab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-ucp-ab
      version: v2
      example: traffic-management
  template:
    metadata:
      labels:
        app: myapp-ucp-ab
        version: v2
        example: traffic-management
    spec:
      containers:
      - name: ucp2-container-ab
        image: docker.io/pintulohargcetts/nginx_custom:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ucp-svc-ab
  labels:
    app: myapp-ucp-ab
spec:
  type: ClusterIP # Not using node port . will be accessing from clusture. 
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: myapp-ucp-ab
    #version: v1 (I have ommited this pod selector label , because I am going to use this selector in destination rule subset).
